# flexers

./: .gitignore  BLOG_PHASE1_COMPLETE.md  CI_STATUS.md  Cargo.toml  DEPLOYMENT_SUCCESS.md  GITHUB_CI_FIXES.md  GITHUB_PAGES_SETUP.md  PHASE11A_NVS_COMPLETE.md  PHASE11B_SPIFFS_COMPLETE.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PHASE7_COMPLETE.md  PHASE9_COMPLETE.md  README.md  STATUS.md
blog/: phase3_rom_stubs.md
docs/: .gitignore  Gemfile  (+5 more)
flexers-core/: Cargo.toml
flexers-core/src/: cpu.rs  decode.rs  lib.rs  memory.rs
flexers-core/src/exec/: alu.rs  branch.rs  call.rs  load_store.rs  mod.rs  special.rs
flexers-core/tests/: firmware_boot_test.rs  flash_integration_test.rs  integration_test.rs  peripheral_integration.rs  rom_stub_test.rs
flexers-core/tests/common/: mod.rs
flexers-session/: Cargo.toml
flexers-session/examples/: firmware_loader.rs
flexers-session/src/: lib.rs  loader.rs
flexers-session/tests/: loader_test.rs
flexers-stubs/: Cargo.toml  README.md
flexers-stubs/src/: dispatcher.rs  esp32_symbols.rs  handler.rs  lib.rs  registry.rs  symbol.rs  symbol_table.rs
flexers-stubs/src/freertos/: event_group.rs  mod.rs  mutex.rs  queue.rs  scheduler.rs  semaphore.rs  stubs.rs  sw_timer.rs  task.rs  timer_tick.rs
flexers-stubs/src/functions/: boot.rs  clock.rs  conversion.rs  gpio_init.rs  io.rs  math.rs  memory.rs  mod.rs  network.rs  nvs.rs  nvs_manager.rs  socket_manager.rs  spiffs.rs  spiffs_manager.rs  string.rs  system.rs  timing.rs  tls.rs  tls_manager.rs  vfs_manager.rs  wifi.rs
flexers-stubs/tests/: network_integration.rs
(+36 files in other folders)
