[package]
name = "flexers-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# No external dependencies - pure Rust implementation

[dev-dependencies]
flexers-periph = { path = "../flexers-periph" }
flexers-stubs = { path = "../flexers-stubs" }
