[package]
name = "flexers-stubs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
flexers-core = { path = "../flexers-core" }
flexers-periph = { path = "../flexers-periph" }
lazy_static = "1.4"
rustls = "0.23"
rustls-pemfile = "2.0"
webpki-roots = "0.26"

[dev-dependencies]
